--- a/css/vars.css
+++ b/css/vars.css
@@ -16,7 +16,7 @@
   --main-menu-nav: #000000;
   --second-lv-category-nav: #666666;
   --third-lv-nav-unselected: #b3b3b3;
-  --body-text: #999999;
+  --body-text-color: #999999;
   --progess-body-text: #39b54a;
 
   /* Fonts */
