feat: add automatic scroll animation; refactor: css code simplified

--- a/css/vars.css
+++ b/css/vars.css
@@ -1,23 +1,28 @@
 /* Figma Styles of your File */
 :root {
   /* Colors */
-  --body-color: #666666;
-  --heading: #666666;
+  --body-text-color: #666666;
+  --heading-color: #666666;
 
   --brand-color: #e0156a;
-  --sub-nav-btn-hover: #e85593;
 
-  --secondary-sub-nav-btn: #4d4d4d;
-  --secondary-sub-nav-btn-hover: #222222;
+  --page-sub-title-text-color: #e0156a;
+  --highlight-text-color: #e0156a;
+  --primary-sub-nav-btn-color: #e0156a;
+  --navigation-accents-color: #e0156a;
+  --sub-nav-btn-hover-color: #e85593;
 
-  --primary-content-bg: #f9f9f9;
-  --secondary-content-bg: #ffffff;
+  --secondary-sub-nav-btn-color: #4d4d4d;
+  --secondary-sub-nav-btn-hover-color: #222222;
 
-  --main-menu-nav: #000000;
-  --second-lv-category-nav: #666666;
-  --third-lv-nav-unselected: #b3b3b3;
-  --body-text-color: #999999;
-  --progess-body-text: #39b54a;
+  --primary-content-bg-color: #f9f9f9;
+  --secondary-content-bg-color: #ffffff;
+
+  --main-menu-nav-color: #000000;
+  --second-lv-category-nav-color: #666666;
+  --third-lv-nav-unselected-color: #b3b3b3;
+  --body-text-color-1: #999999;
+  --progess-body-text-color: #39b54a;
 
   /* Fonts */
   --headline: 700 48px/58px "Cambay", sans-serif;
@@ -30,5 +35,10 @@
   --heading-1: 700 36px/43px "Cambay", sans-serif;
   --headline-mobile: 700 32px/38px "Cambay", sans-serif;
 
+  --steps-text: 400 24px/21px "Karla", sans-serif;
+  --steps-text-mobile: 400 16px/21px "Karla", sans-serif;
+  --odometer: 700 48px/58px "Cambay", sans-serif;
+  --caption-1: 700 48px/58px "Cambay", sans-serif;
+  --caption-2: 700 40px/50px "Cambay", sans-serif;
   /* Effects */
 }
