--- a/css/style.css
+++ b/css/style.css
@@ -2,26 +2,34 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
   box-sizing: border-box;
 }
 
-.bottom-part,
-h4,
-h5 {
+.bottom-part h1 {
   color: #666666;
-  /* font-size: 36px; */
   font-family: Cambay;
   font-weight: 700;
-  /* line-height: 43px; */
-  /* letter-spacing: 1px; */
   word-wrap: "break-word";
-  /* text-align: center; */
-  padding: 50px;
+  text-align: center;
+  margin: 60px;
+}
+
+.bottom-part h4 {
+  color: #666666;
+  font-family: karla;
+  font-weight: 700;
+  word-wrap: "break-word";
+  text-align: center;
+  margin-bottom: 36px;
+  margin-top: 120px;
 }
 
 .img-thumbnail {
   border: 5px;
+}
+
+.carousel-btn-bottom {
+  margin-bottom: 15%;
 }
 
 .bottom-part .btn {
@@ -46,23 +54,36 @@ h5 {
   width: 50vw;
   margin: auto;
   text-align: center;
+  margin-bottom: 120px;
+}
+
+.writer p {
+  color: #666;
+  text-align: center;
+  font-family: Karla;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 10px; /* 137.5% */
 }
 
 .writer-photo {
-  margin: 30px;
+  margin-top: 56px;
+  margin-bottom: 12px;
 }
 
 .subscribe {
   background-color: #f7f7f7;
-  width: 60vw;
+  width: 70vw;
   margin: auto;
   padding: 3%;
 }
 
 .feature {
   margin: auto;
-  padding: 5%;
-  width: 70vw;
+  padding: 0%;
+  width: 80vw;
+  text-align: center;
 }
 
 .copyright {
@@ -75,6 +96,7 @@ h5 {
   background-color: white;
   border-radius: 10px;
   width: 70vw;
+  text-align: center;
 }
 
 .support-us {
@@ -89,7 +111,7 @@ footer {
   padding: 5% 15%;
   background-color: #676665;
   left: 0;
-  margin-top: 5%;
+  margin-top: 80px;
   width: 100vw;
   text-align: left;
 }
@@ -131,9 +153,9 @@ footer {
   background: #fe1e4f;
   color: #fff;
 }
-.socials i {
+.socials img {
   font-size: 18px;
-  margin-right: 15px;
+  margin-right: 24px;
 }
 
 .about-us {
@@ -148,13 +170,14 @@ footer {
 }
 
 .support-us {
-  margin-top: 30%;
+  margin-top: 80px;
 }
 
 .support-us .btn {
-  /* margin-top: 3%; */
+  margin-top: 3%;
   margin-bottom: 10%;
 }
+
 body {
   background-color: var(--secondary-content-bg);
 }
@@ -169,6 +192,7 @@ body {
   font: var(--primary-nav);
   letter-spacing: 0px;
 }
+
 .body-text {
   font: var(--body-text);
   letter-spacing: 0px;
@@ -362,6 +386,7 @@ h4 {
     letter-spacing: 1px;
   }
 }
+
 #homepage-design-body {
   background-color: var(--secondary-content-bg-color);
 }
